--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             />
           </svg>
         </div>
-        <div class="cta-button-text">AlfinAkash Portfolio</div>
+        <div class="cta-button-text">AlfinAkash </div>
       </div>
     </div>
     <div class="heading">Today Overview</div>
